# infra

./: .envrc  .gitignore  README.md  pyproject.toml  shell.nix  testing.ipynb
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.ipynb_checkpoints/: testing-checkpoint.ipynb
aws/testing/: vpc.tf
dbt/: duckd_init.sql
dbt/profiles/: .user.yml  profiles.yml
dbt/scripts/: create_query_from_structure.py  parse_dbt_projects.py
kubernetes/: .terraform.lock.hcl  main.tf
kubernetes/admin/: create_user.sh  port_forward_wsl.sh  roles.yaml  services.sh  set_cluster_ip.sh
kubernetes/airflow/: README.md  build.sh  conf_airflow.yaml  depl_airflow.yaml  main.tf  main.tfvars  pvc-airflow.yaml  pvc_airflow_logs.yaml  requirements.txt  secrets.tf  service.tf  service_airflow.yaml  update_dags.sh  variables.tf
kubernetes/airflow/dags/finn_ads_ingestion/finn_ingestion_lib/: .gitignore  README.md  __init__.py  finn_ingestion_lib.py  pyproject.toml
kubernetes/clickhouse/: Dockerfile  clickhouse.tf  main.tf
kubernetes/docker_builder/: run.sh
kubernetes/gitea/: __act_runner_config.yaml  act_runner.dockerfile  conf_gitea.yaml  depl_gitea.yaml  dind_act_runner_rootless.yaml  gitea.dockerfile  main.tf  main.tfvars  pv_gitea.yaml  pvc_gitea.yaml  service_gitea.yaml  variables.tf
kubernetes/grafana/: main.tf  service.tf
kubernetes/ingestion/: finn.tf
kubernetes/jenkins/: jenkins.tf
kubernetes/minio/: buckets.tf  cron.tf  cron.tf.disable  depl_minio.yaml  main.tf  minio.tf  pvc_minio.yaml  secret.tf  stateful.tf  stateful_old.tf  svc_minio.yaml  variables.tf
(+134 files in other folders)
