[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "finn_ingestion_lib"
version = "0.0.0"
authors = [
  { name="Me", email="alexanderhaugerud@gmail.com" },
]
description = "Yep"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas==2.2.2",
    "bs4==0.0.2",
    "SQLAlchemy==2.0.31",
    "psycopg2-binary==2.9.9",
    "requests==2.32.3",
    "requests-cache==1.2.1"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"